<resources>
    <string name="app_name">JPC_Locator</string>
    <string name="nombre">Nombre</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="password2">Repetir Contraseña</string>
    <string name="login">Login</string>
    <string name="registrar">Registrarse</string>
    <string name="numeroTelefono">Número teléfono</string>
    <string name="title_activity_maps">Map</string>
</resources>
